<resources>
    <string name="app_name" translatable="false">MysteriumVPN</string>
    <string name="connect_button_cancel">Cancel</string>
    <string name="connect_button_connect">Connect</string>
    <string name="connect_button_disconnect">Disconnect</string>
    <string name="connect_button_disconnecting">Disconnecting</string>
    <string name="conn_state_connected">Connected</string>
    <string name="conn_state_connecting">Connecting</string>
    <string name="conn_state_reconnecting">Reconnecting</string>
    <string name="conn_state_not_connected">Disconnected</string>
    <string name="conn_state_disconnecting">Disconnecting</string>
    <string name="vpn_stats_paid">PAID</string>
    <string name="vpn_stats_bytes">B</string>
    <string name="vpn_stats_send_received">RECEIVED / SENT</string>
    <string name="vpn_stats_duration">DURATION</string>
    <string name="vpn_select_proposal">Select node</string>
    <string name="vpn_ip_updating_label">IP: Updating</string>
    <string name="proposals_search_hint">Search by node or country</string>
    <string name="terms_accept">Accept</string>
    <string name="proposals_close">CLOSE</string>
    <string name="feedback_submit_success">Thanks for your feedback! Your feedback submitted successfully.</string>
    <string name="feedback_submit_failed">Whoops! Looks like something went wrong. Try submitting your feedback again.</string>
    <string name="disconnect_to_select_proposal">Disconnect to select new a proposal.</string>
    <string name="connect_button_loading">Loading</string>
    <string name="vpn_status_loading">Loading</string>
    <string name="feedback_message_label">Message</string>
    <string name="feedback_message_required">Message is required.</string>
    <string name="vpn_select_proposal_warning">Please select node to connect.</string>
    <string name="vpn_failed_to_connect">We couldn’t connect you. Please try again.</string>
    <string name="vpn_failed_to_disconnect">We couldn’t disconnect you. Please try again.</string>
    <string name="feedback_email_label">Your contact email (optional)</string>
    <string name="connect_err_invalid_proposal">Proposal is not valid</string>
    <string name="connect_err_insufficient_balance">Yikes. Looks like you need to top up your account.</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_report_issue">Report an issue</string>
    <string name="menu_get_help">Get help</string>
    <string name="feedback_page_title">Report issue</string>
    <string name="feedback_logs_notice">By submitting this form, You agree to send to Mysterium Network some account information like your IP, country and system information. This data will be used to improve our service and help investigate this issue.</string>
    <string name="feedback_message_hint">Tell us what went wrong</string>
    <string name="wallet_title">Wallet</string>
    <string name="wallet_registration_please_wait">Please wait</string>
    <string name="wallet_identity_registration_progress">We are registering your Mysterium Identity on blockchain. This could take up to a few minutes.</string>
    <string name="wallet_registration_failed">Registration failed</string>
    <string name="wallet_registration_try_again">Something went wrong while registering your identity. Please try again.</string>
    <string name="wallet_registration_retry">RETRY</string>
    <string name="wallet_topup_title">Topup</string>
    <string name="wallet_topup_hint">Topup your wallet by sending MYSTT to the address bellow.</string>
    <string name="wallet_topup_free_tokens">GET FREE TOKENS</string>
    <string name="wallet_identity_channel_address_copy">COPY TOPUP ADDRESS</string>
    <string name="wallet_topup_address_copied">Copied</string>
    <string name="wallet_topup_qr_hint">You can also scan this QR code which contains your topup address.</string>
    <string name="force_update_title">Time to update MysteriumVPN!</string>
    <string name="proposals_country_title">Country filter</string>
    <string name="proposals_filter_country_value_all">All</string>
    <string name="proposals_filter_reset_btn">RESET</string>
    <string name="proposals_filter_quality_value_any">Any</string>
    <string name="proposals_quality_filter_include_unreachable">Include unreachable nodes</string>
    <string name="proposals_price_filter_title">Price filter</string>
    <string name="proposals_quality_filter_title">Quality filter</string>
    <string name="proposals_node_type_filter_title">Node IP type filter</string>
    <string name="proposals_price_filter_apply_btn">APPLY</string>
    <string name="feedback_app_version">App version: %1$s</string>
    <string name="feedback_node_version">Node version: %1$s</string>
    <string name="node_type_all">All</string>
    <string name="node_type_business">Business</string>
    <string name="node_type_cellular">Cellular</string>
    <string name="node_type_hosting">Data center</string>
    <string name="node_type_residential">Residential</string>
    <string name="quality_level_any">Any</string>
    <string name="quality_level_high">High</string>
    <string name="quality_level_medium">Medium+</string>
    <string name="quality_level_low">Low</string>
    <string name="force_update_btn_text">Update</string>
    <string name="force_update_description">This app version is not compatible with the latest Mysterium Network protocol and must be updated.</string>
    <string name="force_update_current_version">Current version: <b>%1$s</b></string>
    <string name="force_update_minimum_required_version">Minimum required version: <b>%1$s</b></string>
    <string name="notification_title_connected">Connected to %1$s</string>
    <string name="notification_content">Received %1$s | Send %2$s | Paid %3$s</string>
    <string name="location_status_updating">Updating</string>
    <string name="proposals_filter_country">Country</string>
    <string name="proposals_filter_price">Price</string>
    <string name="proposals_filter_quality">Quality</string>
    <string name="proposals_filter_ip_type">IP type</string>
    <string name="proposals_filter_price_per_hour">Price/hour:</string>
    <string name="proposals_filter_price_per_gib">Price/GiB:</string>
    <string name="proposals_price_combined">%1$s/h %2$s/GiB</string>
    <string name="feedback_send_feedback_button">Send feedback</string>
    <string name="wallet_mystt_test_explanation">MYSTT is a test token which you get for free while we are in the Testnet environment.</string>
    <string name="wallet_balance">Balance</string>
    <string name="wallet_identity_address">Identity Address</string>
    <string name="wallet_identity_address_explanation">Identity is your Mysterium internal user ID. Never send ether or any kind of ERC20 tokens there.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="vpn_ip">IP: %1$s</string>
    <string name="registration_description">MysteriumVPN requires account activation to prevent spam and network attacks.</string>
    <string name="registration_have_a_referral_code">Have a referral code</string>
    <string name="mystt_display">%1$s MYSTT</string>
    <string name="mystt" translatable="false">MYSTT</string>
    <string name="registration_topup_payment_hint">Transfer %1$s MYSTT to your wallet (Görli Testnet blockchain) to proceed.</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="have_a_referral_code">Have a referral code?</string>
    <string name="get_started">Get started</string>
    <string name="how_much_would_you_like_to_topup">How much would you like to topup?</string>
    <string name="topup_amount">Topup amount</string>
    <string name="registration_fee">Registration fee</string>
    <string name="total_amount">Total amount</string>
    <string name="waiting_for_payment">Waiting for payment</string>
    <string name="button_continue">Continue</string>
    <string name="button_register">Register</string>
    <string name="enter_referral_code">Enter referral code:</string>
    <string name="mysterium_network_logo">Mysterium Network logo</string>
    <string name="wallet_topup_select_lightning_network">Lightning Network</string>
    <string name="wallet_topup_action">Topup</string>
    <string name="wallet_topup_currency_title">Select currency</string>
    <string name="wallet_topup_amount_title">Topup amount</string>
    <string name="wallet_topup_payment_successful">Payment successful!</string>
    <string name="wallet_topup_payment_failed">Payment failed… Please try again later!</string>
    <string name="onboarding_main_title_1">Decentralized global node network</string>
    <string name="onboarding_description_title_1">Run by people, for people</string>
    <string name="onboarding_description_content_1">Top up your account now or do it later and use limited functionality and  free nodes</string>
    <string name="onboarding_main_title_2">Surf the web, and pay as you go</string>
    <string name="onboarding_description_title_2">No lock in subscriptions</string>
    <string name="onboarding_description_content_2">Top up your account now or do it later and use limited functionality and  free nodes</string>
    <string name="onboarding_main_title_3">Top up with popular cryptocurrencies</string>
    <string name="onboarding_description_title_3">BTC, ETH, LTC, BСH and more</string>
    <string name="onboarding_description_content_3">Top up your account now or do it later and use limited functionality and  free nodes</string>
    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_next">Next</string>
    <string name="manual_connect_country_select_title">Select node</string>
    <string name="manual_connect_all_nodes">All nodes</string>
    <string name="manual_connect_saved_nodes">Saved</string>
    <string name="manual_connect_all_countries">All countries</string>
    <string name="manual_connect_nodes_label">Nodes</string>
    <string name="manual_connect_country_label">Countries</string>
    <string name="manual_connect_disconnected">Disconnected</string>
    <string name="manual_connect_select_node">Select node</string>
    <string name="manual_connect_smart_unavailable">Smart Connect isn’t available in a test mode\nPlease select node manually</string>
    <string name="manual_connect_country_status">Unprotected</string>
    <string name="manual_connect_protected">Protected</string>
    <string name="manual_connect_price">Price</string>
    <string name="manual_connect_type">Type</string>
    <string name="manual_connect_quality">Quality</string>
    <string name="manual_connect_type_filter_title">Select the node type</string>
    <string name="manual_connect_node">Node</string>
    <string name="manual_connect_another_node">Select another node </string>
    <string name="manual_connect_cancel">Cancel and choose another node</string>
    <string name="manual_connect_connecting">Connecting…</string>
    <string name="manual_connect_connected">Connected</string>
    <string name="manual_connect_disconnect">Disconnect</string>
    <string name="manual_connect_disconnecting">Disconnecting</string>
    <string name="manual_connect_connecting_title">Manual connect</string>
    <string name="wallet_main_title">Account balance</string>
    <string name="wallet_currency">MYSTT</string>
    <string name="wallet_start_balance">0,000</string>
    <string name="wallet_usd_equivalent">USD equivalent ≈ $%.3f</string>
    <string name="wallet_buys_for_you">This buys you:</string>
    <string name="wallet_top_up">Top up</string>
    <string name="wallet_mystt_about">MYSTT is a test token on Ethereum Goerli blockchain</string>
    <string name="wallet_video">Online\n video</string>
    <string name="wallet_web">Web\n browsing</string>
    <string name="wallet_download">of data\n download</string>
    <string name="wallet_music">Music\n Songs</string>
</resources>