<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:text="@string/force_update_title"
            android:textColor="@color/ColorWhite"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>

    <TextView
        android:text="@string/force_update_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/force_update_current_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/force_update_current_version">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/force_update_required_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/force_update_minimum_required_version">
        </TextView>
    </LinearLayout>

    <Button
        android:text="@string/force_update_btn_text"
        style="@style/BigPrimaryButton"
        android:id="@+id/force_update_btn">
    </Button>

</LinearLayout>
