<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <updated.mysterium.vpn.ui.custom.view.ConnectionToolbar
        android:id="@+id/manualConnectToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:leftIcon="@drawable/icon_menu" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_padding_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manualConnectToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/walletTitleTextView"
                style="@style/TextAppearance.HeadTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_padding_size_small_medium"
                android:text="@string/wallet_main_title"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/walletInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_padding_size_small_medium"
                android:layout_marginTop="@dimen/margin_padding_size_small_medium"
                android:background="@drawable/shape_gradient_background">

                <ImageView
                    android:id="@+id/walletCardImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_padding_size_small_medium"
                    android:src="@drawable/icon_wallet_card"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/balanceTextView"
                    style="@style/TextAppearance.HeadNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:text="@string/wallet_start_balance"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/walletCardImageView" />

                <TextView
                    android:id="@+id/currencyTextView"
                    style="@style/TextAppearance.HeadSubNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/wallet_currency"
                    android:textColor="@color/menu_subtitle_light_pink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/balanceTextView" />

                <TextView
                    android:id="@+id/usdEquivalentTextView"
                    style="@style/TextAppearance.BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/margin_padding_size_small"
                    android:text="@string/wallet_usd_equivalent"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/currencyTextView" />

                <TextView
                    android:id="@+id/buysForYouTextView"
                    style="@style/TextAppearance.BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_padding_size_small"
                    android:text="@string/wallet_buys_for_you"
                    android:textColor="@color/onboarding_faded_screen_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usdEquivalentTextView" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_padding_size_xxsmall"
                    android:layout_marginTop="@dimen/margin_padding_size_small"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buysForYouTextView">

                    <updated.mysterium.vpn.ui.custom.view.WalletItemView
                        android:id="@+id/video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:walletIcon="@drawable/icon_video"
                        app:walletTitle="@string/wallet_video" />

                    <updated.mysterium.vpn.ui.custom.view.WalletItemView
                        android:id="@+id/browsing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:walletIcon="@drawable/icon_pages"
                        app:walletTitle="@string/wallet_web" />

                    <updated.mysterium.vpn.ui.custom.view.WalletItemView
                        android:id="@+id/download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:walletIcon="@drawable/icon_cloud"
                        app:walletTitle="@string/wallet_download" />

                    <updated.mysterium.vpn.ui.custom.view.WalletItemView
                        android:id="@+id/music"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:walletIcon="@drawable/icon_music"
                        app:walletTitle="@string/wallet_music" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_padding_size_large"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:text="@string/wallet_mystt_about"
                android:textAlignment="center"
                android:textColor="@color/manual_connect_value_white" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_padding_size_large">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_padding_size_small_medium"
                    android:elevation="4dp"
                    android:src="@drawable/shadow_primary_button"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/topUpButton"
                    style="@style/Widget.PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/margin_padding_size_large"
                    android:elevation="0dp"
                    android:src="@drawable/divider_wallet"
                    android:text="@string/wallet_top_up"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/divider_wallet"
                tools:ignore="ContentDescription" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/chooseListTabLayout"
                style="@style/CustomShapeTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_small_medium" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/listViewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
