<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/nodeTextView"
        style="@style/TextAppearance.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:text="@string/manual_connect_node"
        android:textColor="@color/manual_connect_value_white"
        app:layout_constraintStart_toStartOf="@+id/nodesRecyclerView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceTextView"
        style="@style/TextAppearance.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:layout_marginEnd="@dimen/margin_padding_size_xlarge"
        android:text="@string/manual_connect_price"
        android:textColor="@color/manual_connect_value_white"
        app:layout_constraintEnd_toStartOf="@+id/qualityTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qualityTextView"
        style="@style/TextAppearance.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:text="@string/manual_connect_quality"
        android:textColor="@color/manual_connect_value_white"
        app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/nodesRecyclerView"
        style="@style/ScrollbarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_padding_size_small_medium"
        android:layout_marginTop="@dimen/margin_padding_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qualityTextView"
        tools:itemCount="20"
        tools:listitem="@layout/item_saved_node" />

</androidx.constraintlayout.widget.ConstraintLayout>
